--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,6 @@
-[package]
-name = "server-tool-v2"
-version = "2.0.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.66"
-dirs = "4.0.0"
-eframe = "0.19.0"
-serde = {version = "1.0.147", features = ["derive"]}
-serde_yaml = "0.9.14"
+members = [
+    "crates/server_tool_lib",
+    "crates/server_tool_gui",
+]
