--- a/crates/server_tool_lib/Cargo.toml
+++ b/crates/server_tool_lib/Cargo.toml
@@ -12,5 +12,7 @@ anyhow = "1.0.66"
 dirs = "4.0.0"
 eframe = "0.19.0"
 log = "0.4.17"
+reqwest = { version = "0.11.13", features = ["blocking"] }
 serde = {version = "1.0.147", features = ["derive"]}
+serde_json = "1.0.88"
 serde_yaml = "0.9.14"
