--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -1,18 +1,15 @@
 [package]
-name = "server_tool_lib"
+name = "gui"
 version = "2.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-
 [dependencies]
 anyhow = "1.0.66"
-dirs = "4.0.0"
 eframe = "0.19.0"
 log = "0.4.17"
-reqwest = { version = "0.11.13", features = ["blocking"] }
-serde = {version = "1.0.147", features = ["derive"]}
-serde_json = "1.0.88"
-serde_yaml = "0.9.14"
+pretty_env_logger = "0.4.0"
+server_tool = {path= "../server_tool"}
+
+
