--- a/crates/server_tool/Cargo.toml
+++ b/crates/server_tool/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
-name = "server_tool_gui"
+name = "server_tool"
 version = "2.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+
 [dependencies]
 anyhow = "1.0.66"
+dirs = "4.0.0"
 eframe = "0.19.0"
 log = "0.4.17"
-pretty_env_logger = "0.4.0"
-server_tool_lib = {path= "../server_tool_lib"}
+reqwest = { version = "0.11.13", features = ["blocking"] }
+serde = {version = "1.0.147", features = ["derive"]}
+serde_json = "1.0.88"
+serde_yaml = "0.9.14"
+
