--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -11,5 +11,4 @@ eframe = "0.19.0"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
 server_tool = {path= "../server_tool"}
-
-
+tokio = { version = "1", features = ["macros"] }
