--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 eframe = "0.19.0"
+futures = "0.3.25"
 log = "0.4.17"
+poll-promise = { version = "0.2.0", features = ["tokio"] }
 pretty_env_logger = "0.4.0"
 server_tool = {path= "../server_tool"}
 tokio = { version = "1", features = ["macros"] }
