--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -12,5 +12,6 @@ futures = "0.3.25"
 log = "0.4.17"
 poll-promise = { version = "0.2.0", features = ["tokio"] }
 pretty_env_logger = "0.4.0"
+rfd = "0.10"
 server_tool = {path= "../server_tool"}
 tokio = { version = "1", features = ["macros"] }
