--- a/crates/server_tool/Cargo.toml
+++ b/crates/server_tool/Cargo.toml
@@ -12,10 +12,12 @@ anyhow = "1.0.66"
 dirs = "4.0.0"
 eframe = "0.19.0"
 futures = "0.3"
+hex = "0.4"
 log = "0.4.17"
 reqwest = "0.11.13"
 serde = {version = "1.0.147", features = ["derive"]}
 serde_json = "1.0.88"
 serde_yaml = "0.9.14"
+sha1 = "0.10.5"
 tokio = { version = "1", features = ["full"] }
 
